--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-context-provider-tools",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "Nó personalizado para fornecer contextos dinâmicos em linguagem natural para agentes de IA no n8n.",
   "keywords": [
     "n8n-community-node-package",
@@ -32,7 +32,16 @@
   "n8n": {
     "nodes": [
       "dist/nodes/ContextProvider/ContextProvider.node.js"
-    ]
+    ],
+    "codex": {
+      "resources": {
+        "LangChainTool": [
+          {
+            "node": "n8n-nodes-context-provider-tools.contextProvider"
+          }
+        ]
+      }
+    }
   },
   "dependencies": {
     "langchain": "^0.1.0"
