--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-context-provider-tools",
-  "version": "1.0.9",
+  "version": "1.1.3",
   "description": "Nó personalizado para fornecer contextos dinâmicos em linguagem natural para agentes de IA no n8n.",
   "keywords": [
     "n8n-community-node-package",
@@ -21,7 +21,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && copyfiles -u 1 nodes/**/*.svg dist",
-    "dev": "tsc --watch",
+    "dev": "copyfiles -u 1 nodes/**/*.svg dist && tsc --watch",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "prepublishOnly": "npm run build"
