feat(context-provider): Implement robust chatbot flow manager with LangChain
This commit refactors the context provider node to serve as a comprehensive chatbot flow manager. It introduces support for complex scenarios, dynamic prompt injection, and data validation using Zod and Fuse.js. The node's description and keywords have been updated to reflect its expanded capabilities, and dependencies have been upgraded to utilize the latest versions of LangChain and related libraries. The primary AI tool is now named `buscar_instrucoes_etapa` for clarity in agent interactions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,14 @@
     "removeComments": true
   },
   "include": [
-    "**/*.ts"
+    "nodes/**/*.ts",
+    "index.ts",
+    "vite.config.ts"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "**/*-1.ts",
+    "**/*-1.tsx"
   ]
 }
