--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "n8n-nodes-context-provider-tools",
-  "version": "1.1.4",
-  "description": "Nó personalizado para fornecer contextos dinâmicos em linguagem natural para agentes de IA no n8n.",
+  "version": "1.3.22",
+  "description": "Gerenciador de Fluxo de Chatbot para Agentes de IA no n8n via LangChain.",
   "keywords": [
     "n8n-community-node-package",
     "n8n-node",
     "ai",
     "agent",
-    "context",
-    "llm",
+    "chatbot",
+    "flow",
     "langchain",
     "tool"
   ],
@@ -32,19 +32,13 @@
   "n8n": {
     "nodes": [
       "dist/nodes/ContextProvider/ContextProvider.node.js"
-    ],
-    "codex": {
-      "resources": {
-        "LangChainTool": [
-          {
-            "node": "n8n-nodes-context-provider-tools.contextProvider"
-          }
-        ]
-      }
-    }
+    ]
   },
   "dependencies": {
-    "langchain": "^0.1.0"
+    "langchain": "^0.3.0",
+    "@langchain/core": "^0.3.0",
+    "fuse.js": "^7.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
